# sentiment-stream

./: .flake8  .gitignore  README.md  pyproject.toml
.atl/: skill-registry.md
api/: Dockerfile  __init__.py  config.py  database.py  main.py  models.py  requirements.txt
api/routes/: __init__.py  model_metrics.py  predict.py  sentiments.py  stats.py
api/services/: __init__.py  inference.py  model_loader.py
dashboard/: .dockerignore  Dockerfile  index.html
dashboard/css/: styles.css
dashboard/js/: app.js  charts.js  utils.js
data/: .~lock.dataset_sentimientos_500.csv#
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  MANUAL_TESTING.md
infra/: .env.example  Jenkinsfile  docker-compose.jenkins.yml  docker-compose.test.yml  docker-compose.yml  mongodb-init.js
infra/jenkins/: .dockerignore  Dockerfile
infra/scripts/: jenkins.sh  logs.sh  reset.sh  start.sh  stop.sh
openspec/: exploration.md
openspec/changes/init-architecture/: apply-progress.md  design.md  proposal.md  spec.md  tasks.md  verify-report.md
openspec/specs/init-architecture/: archive-report.md
spark/: Dockerfile  ingest.py  requirements.txt  stream.py  train.py  utils.py
tests/: __init__.py  conftest.py
tests/integration/: test_docker_compose.sh
tests/test_api/: test_health.py  test_predict.py  test_sentiments.py  test_stats.py
